@@ -4,6 +4,10 @@
 #include <pgtypes_timestamp.h>
 
 typedef long date;
+#ifdef __cplusplus
+extern          "C"
+{
+#endif
 
 extern date PGTYPESdate_from_asc(char *, char **);
 extern char *PGTYPESdate_to_asc(date);
@@ -14,5 +18,9 @@ extern int	PGTYPESdate_dayofweek(date);
 extern void PGTYPESdate_today(date *);
 extern int	PGTYPESdate_defmt_asc(date *, char *, char *);
 extern int	PGTYPESdate_fmt_asc(date, char *, char *);
+
+#ifdef __cplusplus
+}
+#endif
 
 #endif   /* PGTYPES_DATETIME */
